--- a/app/article/static/assets/css/_content.scss
+++ b/app/article/static/assets/css/_content.scss
@@ -35,14 +35,19 @@
 .central .article-container .article_p {
   text-align:justify;
   margin-block-start:0;
+  color:var(--article-container-text-color);
 }
 
 .central .article-container .article_h2 {
-  color:var(--sb-background);
+  color:var(--article-container-h2-color);
   margin-block-end: 0.2em;
 }
 .central .article-container .article_h3 {
-  color:darkblue;
+  color:var(--article-container-h3-color);
+  margin-block-end: 0.2em;
+}
+.central .article-container .article_h1 {
+  color:var(--article-container-h1-color);
   margin-block-end: 0.2em;
 }
 
@@ -58,6 +63,14 @@
   padding-top:1em;
   padding-bottom:1em;
   flex-wrap: wrap;
+}
+
+.content .categories a:link,
+.content .categories a:visited,
+.content .categories a:hover,
+.content .categories a:active {
+  color:var(--category-text-color);
+  text-decoration:none;
 }
 
 .content .categories .container{
@@ -78,16 +91,18 @@
   max-height:125px;
   transition: all 1s ease;
   border-radius:50%;
+  background:var(category-img-background);
 }
 
 .content .categories .container img:hover{
   transform: scale(1.25);
+  background-color: var(category-img-hover);
 }
 
 .content .categories .container .category {
   font-size: 1em;
   font-weight: bold;
-  color: black;
+  color: var(--category-text-color);
 }
 
 //articles
@@ -146,11 +161,18 @@
 //intro
 
 .central .content .intro h2{
-  color:var(--sb-background);
+  color:var(--intro-title-color);
 }
 
-.central .content .intro a:hover{
-  color:red;
+
+.central .content .intro a:visited,
+.central .content .intro a:active,
+.central .content .intro a:link{
+  color:var(--intro-link-color);
+}
+
+.central .content .intro p{
+  color:var(--intro-text-color);
 }
 
 .central .content .wrapper a {
