refactoring css adding better font-family for visibility

--- a/app/article/static/assets/css/_content.scss
+++ b/app/article/static/assets/css/_content.scss
@@ -26,7 +26,7 @@
   padding-left:4em;
   padding-right:2em;
   padding-top:0.5em;
-  font-family: "Ubuntu Mono", monospace;
+  font-family: var(--font-central);
   font-size: 20px;
   background-color: var(--content-background);
   flex:1;
@@ -159,6 +159,10 @@
 }
 
 //intro
+
+.central .content .intro{
+  font-family: var(--font-central);
+}
 
 .central .content .intro h2{
   color:var(--intro-title-color);
