--- a/app/article/static/assets/css/_root.scss
+++ b/app/article/static/assets/css/_root.scss
@@ -4,6 +4,7 @@
   --font-cursive:"Cedarville Cursive", cursive;
   --font-pro:"Source Code Pro", monospace;
   --font-ubuntu:"Ubuntu Mono", monospace;
+  --font-central:"raleway", sans-serif;
   --error-message:red;
   
   
