--- a/app/article/static/assets/css/_root.scss
+++ b/app/article/static/assets/css/_root.scss
@@ -121,9 +121,11 @@
     --login-button-color:var(--sb-text);
   }
 
-  // send-message
+  // error
+  --error-color:red;
 
-
-  // darkmode send-message
-
+  // darkmode error
+  [data-theme="dark"] {
+    --error-color:whitesmoke;
+  }
 }
