--- a/app/templates/components/topbar.html
+++ b/app/templates/components/topbar.html
@@ -31,10 +31,7 @@
 
     {% else %}
         <div class="wrapper">
-            <div>{% is_default %}</div>
-            <div>{% is_upload %}</div>
-            <div>{% is_article %}</div>
-            <h3 class="heading">{{request.get_full_path}}</h3>
+            <h3 class="heading">Une erreur est survenue</h3>
         </div>
     
     {% endif %}
